# MyHargassner

./: .gitmodules  CLAUDE.md  MANIFEST.in  QueueReceiver.py  README.md  actuator.py  analyser.py  appconfig.py  boiler-simple.py  boiler.py  core.py  gateway-simple.py  gateway.py  harg.code-workspace  hargconfig.py  install_system_service.sh  main.py  main_queue.py  mqtt.py  mqtt_actuator.py  mqtt_base.py  mqtt_informer.py  myghargassner.service  myhargassner.ini  myhargassner.service  parse.py  pylintrc  pyproject.toml  requirements.txt  setup.py  shared.py  sharedatareceiver.py  sniffer-saved.py  sniffer.py  socket.pyi  socket_manager.py  telnethelper.py  telnetproxy.py  test.py  test2.py  (+2 more)
.claude/commands/: bugsolver.md  discovery.md
bugs/: BUG_001_TECHNICAL_STRATEGY.md  bug-001-phase1-discovery.md
clients/: boiler-client-ai.py  boiler-simple.py  gateway-client-ai.py  shared_simulator.py
docs/: CHANGELOG.md  DOCUMENTATION_STRUCTURE.md  NETWORK_SETUP.md  TECHNICAL_ARCHITECTURE.md
docs/implementation/: bug-001-phase2-analysis.md  bug-001-phase3-proposal.md  codebase-discovery.md
myhargassner/: __init__.py  analyser.py  appconfig.py  boiler.py  core.py  gateway.py  hargconfig.py  main.py  mqtt_actuator.py  mqtt_base.py  mqtt_informer.py  shared.py  socket_manager.py  telnethelper.py  telnetproxy.py
myhargassner/bugs/: bug-002-README.md  paho_mqtt_debug_patch.py  test_mqtt_actuator.py
myhargassner/pubsub/: __init__.py
myhargassner/tests/: PAHO_MQTT_BUG_FIX.md  PAHO_MQTT_DEBUG_README.md  TEST_MQTT_ACTUATOR_README.md  paho_mqtt_debug_patch.py  paho_mqtt_fix_patch.py  test_mqtt_actuator.py
old/: QueueReceiver.py  shared-back.py
prompts/: bugsolver.md
tests/: notes.txt  snifferV0.py  snifferV1.py  tstmq.py
wireshark/: extract-gateway.txt  telnet-requests-replies.txt  udp-requests-replies.txt
